syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "PropValue.proto";

// CmdId: 3131
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message WorldDataNotify {
	map<uint32, PropValue> world_prop_map = 3;

	enum DataType {
		DATA_TYPE_NONE = 0;
		DATA_TYPE_WORLD_LEVEL = 1;
		DATA_TYPE_IS_IN_MP_MODE = 2;
	}
}
